# velo-drive

./: .gitignore  README.md  TAURI-DESIGN.md  TODO.md
docs/: beeper.js  ble-manager.js  builder-backend.js  fit-file.js  index.html  manifest.json  perf-workout-browser.md  planner-analysis.js  planner-backend.js  scrapers.js  service-worker.js  settings.css  settings.js  storage.js  theme.js  velodrive.webmanifest  welcome.css  welcome.js  workout-analysis.js  workout-base.css  workout-builder.js  workout-chart.js  workout-engine.js  workout-metrics.js  workout-picker.css  workout-picker.js  workout-planner.css  workout-planner.js  workout.js  zwo.js
docs-analysis/: 01-functionality-and-user-journeys.md  02-architecture-and-layout.md  03-modernization-options-and-recommendation.md  04-migration-playbook.md  05-design-and-migration-plan.md  README.md
docs-analysis/audit/: 00-behavior-gap-summary.md  00-buttons-views-audit.md  00-css-gap-summary.md  00-events-boundaries-reaudit.md  00-interaction-flash-reaudit.md  00-realworld-adversarial-review.md  00-state-persistence-audit.md  00-untested-realworld-coverage.md  00-welcome-flow-audit.md  00-workout-state-bugs.md  behavior-01-global-hud-engine-ble.md  behavior-02-picker.md  behavior-03-planner.md  behavior-04-builder.md  behavior-05-settings-welcome.md  bughunt-autostart-finish.md  bughunt-pause-resume-state.md  css-01-workout-base.md  css-02-picker-builder.md  css-03-planner.md  css-04-settings.md  css-05-welcome.md
docs-analysis/journeys/: 00-verified-defects.md  journeys.md  (+9 more)
flatpak/: README.md  bike.velodrive.VeloDrive.desktop  bike.velodrive.VeloDrive.metainfo.xml  bike.velodrive.VeloDrive.yml  bike.velodrive.app.desktop  bike.velodrive.app.metainfo.xml  bike.velodrive.app.yml
legacy/: beeper.js  fit-file.js  planner-analysis.js  scrapers.js  service-worker.js  settings.css  settings.js  storage.js  theme-init.js  velodrive.webmanifest  welcome.css  welcome.js  workout-base.css  workout-builder.js  workout-library.js  workout-picker.css  workout-picker.js  workout-planner.js  workout.js  zwo.js
scripts/: build-flatpak.sh
src/: background.js  ble-manager.js  content.js  manifest.json  scrapers.js  settings.js  storage.js  workout-base.css  workout-builder.js  workout-chart.js  workout-engine.js  workout-metrics.js  workout-picker.css  workout-picker.js  workout.html  workout.js  zwo.js
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ble.rs  files.rs  lib.rs  main.rs  net.rs
web/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
(+368 files in other folders)
