[package]
name = "velodrive"
version = "0.0.0"
edition = "2021"
description = "VeloDrive native shell (Tauri) — bundle id bike.velodrive.app"
license = "MIT"
publish = false

# NOTE: Tauri itself (tauri, tauri-build, fs/dialog/updater plugins) is added once
# the BLE spike below is validated and we wire the webview. For now this crate
# hosts the heart-rate-monitor spike that proves btleplug <-> BlueZ <-> real
# hardware on Linux — the only genuinely risky part of the port.

[dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
futures = "0.3"
anyhow = "1"
uuid = "1"
