[package]
name = "velodrive"
version = "0.0.0"
edition = "2021"
description = "VeloDrive native shell (Tauri) — app id bike.velodrive.VeloDrive"
license = "MIT"
publish = false

[lib]
name = "velodrive_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
# Match the version tao pulls in, so gtk_window() types unify (Linux titlebar tweaks).
gtk = "0.18"
base64 = "0.22"
keepawake = "0.5"
opener = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
btleplug = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
futures = "0.3"
anyhow = "1"
log = "0.4"
uuid = "1"

# Standalone BLE bring-up spikes (no Tauri) — see README.
[[bin]]
name = "hrm-spike"
path = "src/bin/hrm-spike.rs"

[[bin]]
name = "ftms-spike"
path = "src/bin/ftms-spike.rs"
